test_case/rust-lang_rust/54273_421773019_22.rs
compile_fail,E0423\npub mod a {\n    pub const I: i32 = 1;\n}\n\nfn h1() -> i32 {\n    a.I\n    //~^ ERROR expected value, found mo\nyield this error:\n\n